syntax = "proto3";

import "google/protobuf/any.proto";

// weave.trait.security.BoltLockSettingsTrait
message BoltLockSettings {
}